--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs
+/Automata/.vs/Automata/v16
+Automata/.vs/Automata/v16/.suo
+Automata/.vs/Automata/v16/Browse.VC.db
+Automata/.vs/Automata/v16/.suo
+Automata/.vs/Automata/v16/Browse.VC.db
