--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Automata/.vs/Automata/v16/.suo
 Automata/.vs/Automata/v16/Browse.VC.db
 Automata/.vs/Automata/v16/.suo
 Automata/.vs/Automata/v16/Browse.VC.db
+Automata/Automata/Automata.vcxproj
