Cleaning MICROSOFT GARBAGE

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@
 ################################################################################
 
 /.vs
-/Automata/.vs/Automata/v16
-Automata/.vs/Automata/v16/.suo
-Automata/.vs/Automata/v16/Browse.VC.db
-Automata/.vs/Automata/v16/.suo
-Automata/.vs/Automata/v16/Browse.VC.db
+/Automata/.vs
+/Automata/v16
+/Automata/Automata/Debug
