--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /Automata/v16
 /Automata/Automata/Debug
 Automata/Automata/Automata.vcxproj
+/Automata/Automata/x64/Debug
+/Automata/x64/Debug
+Automata/Automata/Automata.vcxproj.user
